--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -1,4 +1,4 @@
-swagger: "2.0"
+swagger: '2.0'
 x-api-store-tags:
   - medical reactions
   - health products
@@ -9,7 +9,7 @@ x-api-store-plans:
 info:
   title: Base de données en ligne des effets indésirables de Canada Vigilance (BDEI)
   description: La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
-  version: "0.1"
+  version: '0.1'
 
 schemes:
   - https
@@ -26,28 +26,28 @@ paths:
         - Ingrédient actif et produit pharmaceutique
       description: Fournit des renseignements sur les ingrédients actifs de tous les médicaments.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche l'ingrédient actif du produit selon l'identifiant de l'ingrédient actif d'un produit pharmaceutique spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all drug product ingredients, or if an ID is provided, the list of all ingredients that correspond to the given active ingredient identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/DrugProductIngredient"
+              $ref: '#/definitions/DrugProductIngredient'
             xml:
               name: DrugProductIngredients
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /drugproduct:
     get:
@@ -55,27 +55,27 @@ paths:
         - Produit pharmaceutique
       description: Fournit le nom de tous les médicaments et leurs codes.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche le produit pharmaceutique selon l'identifiant du produit spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all drug products, or if an ID is provided, the list of all drug products that correspond to the given drug product identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/DrugProduct"
+              $ref: '#/definitions/DrugProduct'
             xml:
               name: DrugProducts
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /gender:
     get:
@@ -83,27 +83,27 @@ paths:
         - Sexe
       description: Fournit des renseignements sur le sexe, accompagnés du code du sexe.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche le sexe selon l'identifiant du sexe spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all genderes, or if an ID is provided, the list of all genders that correspond to the given gender identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Gender"
+              $ref: '#/definitions/Gender'
             xml:
               name: Genders
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /outcome:
     get:
@@ -111,27 +111,27 @@ paths:
         - Résultat
       description: Fournit des renseignements sur le résultat, accompagnés du code du résultat.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche le résultat selon l'identifiant du résultat de la déclaration spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all outcomes, or if an ID is provided, the list of all outcomes that correspond to the given outcome identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Outcome"
+              $ref: '#/definitions/Outcome'
             xml:
               name: Outcomes
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /reaction:
     get:
@@ -139,27 +139,27 @@ paths:
         - Réaction
       description: Fournit des renseignements au sujet des réactions associées aux déclarations.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: Affiche la réaction selon l'identifiant de la réaction spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all reactions, or if an ID is provided, the list of all reactions that correspond to the given reaction identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Reaction"
+              $ref: '#/definitions/Reaction'
             xml:
               name: Reactions
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /reportdrug:
     get:
@@ -167,28 +167,28 @@ paths:
         - Médicaments associés aux déclarations
       description: Fournit des renseignements sur les médicaments associés aux déclarations.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche les médicaments selon l'identifiant de la déclaration d'un produit spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all drug reports, or if an ID is provided, the list of all drug reports that correspond to the given adverse reaction report number
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/ReportDrug"
+              $ref: '#/definitions/ReportDrug'
             xml:
               name: ReportDrugs
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /reportlink:
     get:
@@ -196,28 +196,28 @@ paths:
         - Déclarations liées
       description: Fournit des renseignements sur les déclarations liées ou en double, accompagnés du code des déclarations.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche la déclaration liée selon l'identifiant d'un numéro de déclaration spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all report links, or if an ID is provided, the list of all reports links that correspond to the given report link identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/ReportLink"
+              $ref: '#/definitions/ReportLink'
             xml:
               name: ReportLink
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /reporttype:
     get:
@@ -225,28 +225,28 @@ paths:
         - Type de déclaration
       description: Fournit des renseignements sur le type de déclaration, accompagnés du code du type de déclaration.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche le type de déclaration selon l'identifiant d'un type de déclaration spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all report types, or if an ID is provided, the list of all report types that correspond to the given report type identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/ReportType"
+              $ref: '#/definitions/ReportType'
             xml:
               name: ReportType
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /report:
     get:
@@ -254,28 +254,28 @@ paths:
         - Déclaration
       description: Fournit des renseignements au sujet des déclarations et des patients.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche la déclaration selon le numéro d'une déclaration d'effet indésirable spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all reports, or if an ID is provided, the list of all reports that correspond to the given adverse reaction report number
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Report"
+              $ref: '#/definitions/Report'
             xml:
               name: Reports
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /seriousness:
     get:
@@ -283,28 +283,28 @@ paths:
         - Gravité de la réaction indésirable
       description: Fournit des renseignements sur la gravité de la réaction, accompagnés du code de gravité.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche la gravité d'une réaction selon l'identifiant de la gravité de la déclaration spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all seriousness presentation texts, or if an ID is provided, the list of all texts that correspond to the given serious report identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Seriousness"
+              $ref: '#/definitions/Seriousness'
             xml:
               name: Seriousness
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
   /source:
     get:
@@ -312,33 +312,33 @@ paths:
         - Source de déclaration
       description: Fournit des renseignements sur la source de déclaration, accompagnés du code de la source.
       parameters:
-        - $ref: "#/parameters/UserKeys"
-        - $ref: "#/parameters/QueryLang"
-        - $ref: "#/parameters/QueryType"
+        - $ref: '#/parameters/UserKeys'
+        - $ref: '#/parameters/QueryLang'
+        - $ref: '#/parameters/QueryType'
         - name: id
           in: query
           type: string
           description: |
             Affiche la source d'une déclaration selon l'identifiant de la source de la déclaration spécifié dans la requête.
       responses:
-        "200":
-          description: Returns a list of all sources, or if an ID is provided, the list of all sources that correspond to the given source identifier
+        '200':
+          description: ''
           schema:
             type: array
             items:
-              $ref: "#/definitions/Source"
+              $ref: '#/definitions/Source'
             xml:
               name: Sources
               wrapped: true
-        "204":
-          $ref: "#/definitions/204"
-        "404":
-          $ref: "#/definitions/404"
+        '204':
+          $ref: '#/definitions/204'
+        '404':
+          $ref: '#/definitions/404'
 
 definitions:
-  "204":
+  '204':
     type: string
-  "404":
+  '404':
     type: string
 
   DrugProductIngredient:
@@ -700,7 +700,7 @@ parameters:
     type: string
     required: true
   UserKeys:
-    name: "user-key"
+    name: 'user-key'
     type: string
     in: header
     required: true
